Eleventy Migration - Video dimension determined at build time to prevent layout shift

--- a/src/styles/components/_post.scss
+++ b/src/styles/components/_post.scss
@@ -149,6 +149,7 @@ article {
 .video-embed,
 .codepen-embed {
     width: 100%;
+    height: auto;
     border: 0;
 }
 
